2007-03-21  Ankit Jain  <jankit@novell.com>

	* MakefileData.cs (PkgCheckModulesRegex): Fix regex to correctly handle
	strings like 'PKG_CHECK_MODULES(FOO,foo0 >= 2.4 foo1 foo2)', this should
	give 3 packages : foo0, foo1 and foo2.

2007-03-04  David Makovský (Yakeen) <yakeen@sannyas-on.net>

	* MonoDevelop.Autotools/Handler.cs: make strings translatable.

2007-03-04  David Makovský (Yakeen) <yakeen@sannyas-on.net>

	* gtk-gui/MonoDevelop.Autotools.MakefileOptionPanelWidget.cs,
	* gtk-gui/gui.stetic: make all strings in option panel translatable.

2007-02-28  Ankit Jain <jankit@novell.com> 

	* MakefileData.cs (WriteFiles): Ignore directory entries.

2007-02-22  Ankit Jain  <jankit@novell.com>

	* MakefileOptionPanelWidget.cs: Disable the AssemblyName and OutputDir
	combos, as they are not being used right now.
	* gtk-gui/*: Update.

2007-02-21  Ankit Jain  <jankit@novell.com>

	* CustomMakefile.cs: Avoid adding extra spaces for empty variables.

2007-02-20  Ankit Jain  <jankit@novell.com>

	* MakefileData.cs: Support escaping filenames. Escaping only '\' and '#'
	currently.

2007-02-20  Ankit Jain  <jankit@novell.com>

	* MakefileOptionPanelWidget.cs: Ensure that entry boxes for make targets
	are activated only if required when loading the gui. These should be
	activated only if a valid makefile is specified.

2007-02-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Autotools.addin.xml: Change add-in versions to 0.13.

2007-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* MakefileProjectServiceExtension.cs: Don't run make if the build
	  target is not specified.
	* MonoDevelop.Autotools.addin.xml, FileNodeBuilderExtension.cs,
	  Commands.cs, MakefileData.cs: Allow excluding a file from the
	  makefile integration. Added menu option for enabling/disabling the
	  exclusion.
	* MakefileOptionPanelWidget.cs,
	  gtk-gui/MonoDevelop.Autotools.MakefileOptionPanelWidget.cs,
	  gtk-gui/gui.stetic: Added checkboxes for enabling/disabling
	  makefile targets.